--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,23 +27,20 @@ jobs:
         cache: maven
     - name: Build and test with Maven
       run: mvn clean install
-    - name: SonarQube Quality Analysis
-      run: mvn sonar:sonar -s .m2/settings.xml -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-    - name: SonarQube Quality Gate check
-      id: sonarqube-quality-gate-check
-      uses: sonarsource/sonarqube-quality-gate-action@master
-      # Force to fail step after specific time.
-      timeout-minutes: 20
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: "SonarQube Quality Gate Status"
-      run: echo "The Quality Gate status is ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
-    - name: Login to docker
-      run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: Build docker image
-      run: docker build -t raouldevops/demo-github-actions-app .
-    - name: Publish image to docker hub
-      run: docker push raouldevops/demo-github-actions-app:latest
+  sonarcloudAnalysis:
+    name: SonarCloudScan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: demo-app-github-actions-ci-cd/
 
   deploy:
     needs: build
