--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,10 @@ jobs:
         cache: maven
     - name: Build and test with Maven
       run: mvn clean install
-    - name: SonarCloud
+    - name: SonarCloud Analysis
       uses: sonarsource/sonarcloud-github-action@master
+      with:
+        projectBaseDir: .
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
