--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,14 +28,14 @@ jobs:
     - name: Build and test with Maven
       run: mvn clean install
     - name: SonarCloud Analysis
-      uses: sonarsource/sonarcloud-github-action@v1.8
+#      uses: sonarsource/sonarcloud-github-action@v1.8
       with:
         args: >
           -Dsonar.organization=raouldevops
           -Dsonar.projectKey=raouldevops_demo-app-github-actions-ci-cd
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn sonar:sonar -s .m2/settings.xml -Dsonar.login=${{ secrets.SONAR_TOKEN }}
     - name: SonarQube Quality Gate check
       id: sonarqube-quality-gate-check
