--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,10 +29,10 @@ jobs:
       run: mvn clean install
     - name: SonarCloud Analysis
 #      uses: sonarsource/sonarcloud-github-action@v1.8
-      with:
-        args: >
-          -Dsonar.organization=raouldevops
-          -Dsonar.projectKey=raouldevops_demo-app-github-actions-ci-cd
+#      with:
+#        args: >
+#          -Dsonar.organization=raouldevops
+#          -Dsonar.projectKey=raouldevops_demo-app-github-actions-ci-cd
 #      env:
 #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
