--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=com.raoul:demo
-
+sonar.projectKey=raouldevops_demo-app-github-actions-ci-cd
+sonar.organization=raouldevops
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/
 sonar.sources=.
