sonarcloud analysis gate quality check

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,14 +38,14 @@ jobs:
 #        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn sonar:sonar -s .m2/settings.xml -Dsonar.token=${{ secrets.SONAR_TOKEN }} -Dsonar.organization=raouldevops -Dsonar.projectKey=raouldevops_demo-app-github-actions-ci-cd
     - name: SonarQube Quality Gate check
-      run: mvn verify sonar:sonar -Dsonar.qualitygate.wait=true
+      run: mvn verify sonar:sonar -s .m2/settings.xml -Dsonar.token=${{ secrets.SONAR_TOKEN }} -Dsonar.organization=raouldevops -Dsonar.projectKey=raouldevops_demo-app-github-actions-ci-cd -Dsonar.qualitygate.wait=true
 #      id: sonarqube-quality-gate-check
 #      uses: sonarsource/sonarqube-quality-gate-action@master
 #      # Force to fail step after specific time.
 #      timeout-minutes: 5
 #      env:
 #        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: "SonarQube Quality Gate Status"
+    - name: SonarQube Quality Gate Status
       run: echo "The Quality Gate status is ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
     - name: Login to docker
       run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_PASSWORD }}
