--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -43,7 +43,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [server]
+    runs-on: self-hosted
     steps:
     - name: Pull image from docker hub
       run: docker pull raouldevops/demo-github-actions-app:latest
